# context-aware-redactor

./: .gitignore  README.md  TECH-ARCHITECTURE.md  main.py  pyproject.toml
redaction/: logging_config.py
redaction/core/: __init__.py  definitions.py  domain.py  exceptions.py  loader.py  patterns.yaml
redaction/engine/: __init__.py  cache.py  presidio_wrapper.py  recognizers.py  spacy_driver.py
redaction/logic/: __init__.py  validators.py
redaction/service/: __init__.py  config.py  pipeline.py
samples/: sample-aps.txt
