[project]
name = "context-aware-redactor"
version = "0.1.0"
description = "Context Matters when Redacting Health Records for AI Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    # Direct URL dependency for the spaCy model so 'uv sync' handles it automatically
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl",
    "python-dotenv>=1.2.1",
    "numpy<2.0",
    "pydantic-settings>=2.12.0",
]
